# audio-over-wt

./: Cargo.toml  README.md  rustfmt.toml
crates/client/: Cargo.toml
crates/client/src/: audio_backend.rs  coder.rs  constants.rs  errors.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  protocol.proto
crates/server/: Cargo.toml
crates/server/src/: main.rs
