[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
wtransport = { workspace = true, features = ["dangerous-configuration"] }
device_query = "4.0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

