[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
wtransport = { workspace = true, features = ["dangerous-configuration"] }
device_query = "4.0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
audiopus = "0.3.0-rc.0"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"] }
thiserror = "2.0.17"
cpal = "0.16.0"
tokio-util = { version = "0.7.11" }
ringbuf = "0.4.1"
protocol = { path = "../protocol" }
