[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
wtransport.workspace = true
tokio = { workspace = true, features = ["macros", "fs", "io-util", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = "1.0.100"
protocol = { path = "../protocol" }
